created banner component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --padding-large: 40px;
 }
 
@@ -8,11 +8,15 @@
   box-sizing: border-box;
 }
 
-
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  background-color: #1C1814;
+  background-color: #1c1814;
   min-height: 100vh;
   color: white;
+}
+
+button {
+  border: none;
 }
