--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,54 @@ body {
 button {
   border: none;
 }
+
+.how-it-works-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+@media screen and (max-width: 1500px) and (min-width: 1200px) {
+  h1 {
+    font-size: 50px !important;
+    line-height: 50px !important;
+  }
+  h2 {
+    font-size: 20px !important;
+    line-height: 20px !important;
+  }
+  p {
+    font-size: 14px !important;
+    line-height: 16px !important;
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-width: 701px) {
+  h1 {
+    font-size: 35px !important;
+    line-height: 40px !important;
+  }
+  h2 {
+    font-size: 25px !important;
+    line-height: 20px !important;
+  }
+  p {
+    font-size: 15px !important;
+    line-height: 12px !important;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  h1 {
+    font-size: 35px !important;
+    line-height: 35px !important;
+  }
+  h2 {
+    font-size: 25px !important;
+    line-height: 25px !important;
+  }
+  p {
+    font-size: 15px !important;
+    line-height: 15px !important;
+  }
+}
