--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,19 +1,16 @@
 .container {
-    display: flex;
-    align-items: center;
-    padding: var(--padding-large);
-    gap: clamp(20px, 10vw, 176px);
-    width: 100%;
-    padding-bottom: 100px;
+  display: flex;
+  align-items: center;
+  padding: var(--padding-large);
+  gap: clamp(20px, 10vw, 176px);
+  width: 100%;
 }
-
 
 .header_left {
-    display: flex;
-    align-items: center;
-    gap: 12px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
-
 
 .title {
   color: white;
@@ -22,24 +19,21 @@
   font-weight: 700;
 }
 
-
 .header_links {
-    display: flex;
-    align-items: center;
-    gap: clamp(20px, 10vw, 60px);
-    flex: 1; 
+  display: flex;
+  align-items: center;
+  gap: clamp(20px, 10vw, 60px);
+  flex: 1;
 }
 
-
 a {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-    line-height: 18px;
-    letter-spacing: 0;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0;
 }
 
 .active-link {
-    color: #E04726; 
-  }
-  
+  color: #e04726;
+}
