--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -22,7 +22,7 @@
 .header_links {
   display: flex;
   align-items: center;
-  gap: clamp(20px, 10vw, 60px);
+  gap: 60px;
   flex: 1;
 }
 
@@ -36,4 +36,49 @@ a {
 
 .active-link {
   color: #e04726;
+}
+
+@media screen and (max-width: 1500px) and (min-width: 1200px) {
+  .header_links {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0;
+  }
+}
+
+@media screen and (max-width: 1100px) and (min-width: 701px) {
+  .header_links {
+    gap: 20px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 10px;
+    line-height: 10px;
+    letter-spacing: 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header_links {
+    gap: 10px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 10px;
+    line-height: 10px;
+    letter-spacing: 0;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
 }
